[package]
name = "rosolio"
version = "0.1.0"
edition = "2018"
authors = ["songww <sww4718168@163.com>"]
description = "librosa reimplamented in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1"
once_cell = "1.8"
thiserror = "1.0.26"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0.66"

[features]
default = []
